--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,72 @@
+html {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+body {
+  background: none;
+}
+
 .app {
-  padding: 1rem;
-  font-size: 2.5rem;
+  background: white;
+  max-width: 650px;
+  margin: 5rem auto;
+  padding: 3rem;
+  border-radius: 0.5rem;
+  box-shadow: 0.5rem 0.5rem 0.2rem rgba(0, 0, 0, 0.3);
+}
+
+.app h1,
+.app h2 {
+  margin: 0;
+  padding: 0;
 }
 
 .app h1 {
-  font-size: 2rem;
+  text-align: center;
+  margin: 0 0 5rem;
+  padding: 0 0 1rem;
+  border-bottom: 3px solid #333;
 }
 
-.fa {
-  display: inline-block;
-  padding: 0 1rem;
+.app h2 {
+  margin-left: 3.25rem;
+  margin-bottom: 1rem;
 }
 
-input {
-  font-size: 2.5rem;
-  padding: 0.5rem 1rem;
+.input-group {
+  margin: 0 1rem 2rem 1rem;
+}
+
+.app > div {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
+.app > div:last-child,
+.app > div:only-child {
+  margin: 0;
+}
+
+@media (max-width: 767px) {
+  .app {
+    margin: 0 auto;
+    padding: 0.5rem;
+    border-radius: 0;
+  }
+
+  .fa.fa-arrow-right:before {
+    content: "\f063";
+  }
+
+  .fa.fa-arrow-left:before {
+    content: "\f062";
+  }
+
+  .app h1 {
+    margin: 0 0 2rem;
+  }
+
+  .app h2 {
+    margin-left: 1rem;
+  }
 }
